# ppx_deriving_yaml

./: .gitignore  .ocamlformat  CHANGES.md  CONTRIBUTING.md  LICENSE.md  README.md  dune  dune-project  index.html  ppx_deriving_ezjsonm.opam  ppx_deriving_yaml.opam
.github/workflows/: ocaml-ci-check.yml  ocaml-ci.yml  test.yml
example/: dune  main.ml  main.mli  person.mli
lib/: attrs.ml  attrs.mli  dune  helpers.ml  helpers.mli  value.ml  value.mli  yaml.mli
ppx/: dune  ppx_deriving_yaml.ml
ppx_deriving_ezjsonm/: index.html
ppx_deriving_ezjsonm/Ppx_deriving_ezjsonm/: index.html
ppx_deriving_ezjsonm/Ppx_deriving_ezjsonm/Backend/: index.html
ppx_deriving_ezjsonm/Ppx_deriving_ezjsonm/Backend/Attrs/: index.html
ppx_deriving_ezjsonm/Ppx_deriving_ezjsonm/Value/: index.html
ppx_deriving_yaml/: index.html
ppx_deriving_yaml/Ppx_deriving_yaml/: index.html
ppx_deriving_yaml/Ppx_deriving_yaml/Backend/: index.html
ppx_deriving_yaml/Ppx_deriving_yaml/Backend/Attrs/: index.html
ppx_deriving_yaml/Ppx_deriving_yaml/Value/: index.html
ppx_deriving_yaml/Ppx_deriving_yaml_common/: index.html
ppx_deriving_yaml/Ppx_deriving_yaml_common/Helpers/: index.html
ppx_deriving_yaml/Ppx_deriving_yaml_common/Value/: index.html
ppx_deriving_yaml/Ppx_deriving_yaml_common/Value/Make/: index.html
ppx_deriving_yaml/Ppx_deriving_yaml_common/Value/Make/argument-1-_/: index.html
ppx_deriving_yaml/Ppx_deriving_yaml_common/Value/Make/argument-1-_/Attrs/: index.html
ppx_deriving_yaml/Ppx_deriving_yaml_common/Value/module-type-Backend/: index.html
ppx_deriving_yaml/Ppx_deriving_yaml_common/Value/module-type-Backend/Attrs/: index.html
scratch/: dune  main.ml
src/: attrs.ml  attrs.mli  dune  helpers.ml  helpers.mli  ppx_deriving_yaml.ml  value.ml  value.mli
src/common/: dune  helpers.ml  helpers.mli  ppx_deriving_yaml_common.ml  value.ml  value.mli
src/ezjsonm/: dune  index.mld  ppx_deriving_ezjsonm.ml
src/yaml/: dune  index.mld  ppx_deriving_yaml.ml
test/: dune  test.ml
test/expect/: gen_rules.ml
test/expect/errors/: dune  dune.inc  err.expected  err.ml
test/expect/passing/: dune  dune.inc  err.expected  inline.ml  locally_open_module.expected  locally_open_module.ml  recursive.expected  simple.expected  simple.ml  skip_unknown.expected  skip_unknown.ml
test/expect_ezjsonm/: gen_rules.ml
test/expect_ezjsonm/errors/: dune  dune.inc  err.expected  err.ml
test/expect_ezjsonm/passing/: dune  dune.inc  recursive.expected  recursive.ml  simple.expected  simple.ml  skip_unknown.expected  skip_unknown.ml
test/expect_yaml/: LICENSE.md  gen_rules.ml
test/expect_yaml/errors/: dune.inc
test/expect_yaml/passing/: dune.inc  recursive.expected  recursive.ml  simple.expected  skip_unknown.expected
